<resources>
    <string name="app_name">Switfy-companion</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="fragment_search_label">Search Student</string>
    <string name="fragment_student_info_label">Student Info</string>
    <string name="fragment_student_projects_label">Projects</string>

    <!-- Buttons -->
    <string name="btn_search">Search</string>
    <string name="btn_back">Back</string>
    <string name="btn_projects">Projects</string>
    <string name="btn_next_page">&gt;</string>
    <string name="btn_prev_page">&lt;</string>
    <!-- TextViews -->
    <string name="textView_login">Login</string>
    <string name="textView_correction_points">Correction points</string>
    <string name="textView_pool_date">Pool date:</string>
    <string name="textView_wallet">Wallet</string>
    <string name="textView_full_name">Full Name</string>
    <string name="textView_student_email">student@student.42.fr</string>
    <string name="textView_skills">Skills</string>
    <string name="textView_skill">Skill</string>
    <string name="textView_project">Project</string>
    <string name="textView_settings_dark_mode">Dark mode</string>
    <!-- EditTexts -->
    <string name="editText_login">student</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>