<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentProjectsFragment">

    <Button
        android:id="@+id/button_back_to_student"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="36dp"
        android:text="@string/btn_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button_back_to_student"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_prev_page"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:text="@string/btn_prev_page"
            android:textAlignment="center"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView_projects" />

        <TextView
            android:id="@+id/textView_page"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="0"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView_projects" />

        <Button
            android:id="@+id/btn_next_page"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:text="@string/btn_next_page"
            android:textAlignment="center"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView_projects" />

        <ScrollView
            android:id="@+id/scrollView_projects"
            android:layout_width="391dp"
            android:layout_height="0dp"
            android:layout_marginBottom="50dp"
            android:background="#3D4050"
            android:backgroundTintMode="add"
            android:contentDescription="@string/btn_projects"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>