<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="false"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="false"
    android:layout_gravity="center"
    tools:context=".StudentInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/studentInfoWrapperLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/studentInfoLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/studentHeaderLayout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/studentHeaderTextlayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    app:flow_verticalAlign="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageView"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textView_studentLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textView_login"
                        android:textAlignment="textStart"
                        android:textSize="28sp"
                        app:flow_horizontalAlign="start"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView_studentName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textView_full_name"
                        android:textAlignment="textStart"
                        android:textSize="22sp"
                        app:flow_horizontalAlign="start"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textView_studentLogin" />

                    <TextView
                        android:id="@+id/textView_studentEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textView_student_email"
                        android:textAlignment="textStart"
                        android:textSize="14sp"
                        app:flow_horizontalAlign="start"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textView_studentName" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="110dp"
                    android:layout_height="165dp"
                    android:layout_marginLeft="15sp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/studentTextLayout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/skillsLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/studentHeaderLayout">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/poolDateCardLayout"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/card"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.28"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/poolDateWrapperLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/textView_poolDate"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:gravity="center_vertical"
                            android:text="@string/textView_pool_date"
                            android:textAlignment="textStart"
                            android:textSize="22sp"
                            app:flow_horizontalAlign="center"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textView_poolDate_value"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_marginStart="8sp"
                            android:gravity="center_vertical"
                            android:text="-"
                            android:textAlignment="textStart"
                            android:textSize="22sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@id/textView_poolDate"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/pointsInfoCardLayout"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/card"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.6"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/correctionsWrapperLayout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintWidth_percent="0.5">

                        <TextView
                            android:id="@+id/textView_studenCorrections"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="0sp"
                            android:text="@string/textView_correction_points"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            app:flow_horizontalAlign="center"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textView_correction_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textAlignment="textStart"
                            android:textSize="30sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/textView_studenCorrections" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/walletWrapperLayout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintWidth_percent="0.5">

                        <TextView
                            android:id="@+id/textView_studenWallet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="0sp"
                            android:text="@string/textView_wallet"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            app:flow_horizontalAlign="start"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textView_wallet_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="0sp"
                            android:text="0"
                            android:textAlignment="textStart"
                            android:textSize="30sp"
                            app:flow_horizontalAlign="start"
                            app:flow_verticalAlign="center"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/textView_studenWallet" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/skillsLayout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.48"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/textView_Skills"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/card"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/textView_skills"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    app:flow_horizontalAlign="center"
                    app:flow_verticalAlign="center"
                    app:layout_constraintBottom_toTopOf="@id/recyclerView_skills"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_skills"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/card"
                    android:fadeScrollbars="false"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:scrollbarSize="5dp"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:verticalScrollbarPosition="right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.82"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView_Skills" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/studentInfoButtonsLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.85">

            <Button
                android:id="@+id/button_back_to_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/progress"
                android:foregroundGravity="center_vertical|center"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/btn_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_projects"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/progress"
                android:foregroundGravity="center_vertical|center"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/btn_projects"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>